# wasm-runtime

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs
src/: core.rs  decode.rs  execute.rs  lib.rs
src/core/: index.rs  instructions.rs  types.rs  value.rs
src/decode/: instruction.rs  prelude.rs  section.rs  types.rs  util.rs  value.rs
src/execute/: stack.rs
test/: add.wasm  test.wasm
tests/: combination.wasm  testsuite.rs
